loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:1: error: Missing closing brace `}' assumed here
var x=0
^